--- a/p02/style.css
+++ b/p02/style.css
@@ -1,37 +1,105 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 *{
-    box-sizing: border-box;  
-    list-style-type: none; 
+    box-sizing: border-box;
 }
 body{
+    background-color: #457e85;
+    color: white;
     display: flex;
     flex-direction: column;
-    font-family: 'Open Sans', sans-serif;
-    background-color: #42858c;
     align-items: center;
     justify-content: center;
     height: 100vh;
-    color: white;
-    
+    font-family: 'Source Sans Pro', sans-serif;
+    margin:0;
+    font-size: 16px;
 }
-.theatre
+.legend
 {
-    margin: 20px 0;
+    display: flex;
+    margin-left: -25px;
 }
-
-.theatre select {
-    background-color: #e4ffff;
-    color: #35393C;
-    padding: 5px 10px 5px 10px;
-    font-size: 18px;
-    border-radius: 8px;
-    border: 0;
-}
-.theatre span
+.legend li
 {
-    color: #feffb4;
-}
-.theatre legend
-{
+    margin-right: 20px;
     list-style-type: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.theatre select{
+    padding: 5px 10px 5px 10px;
+    border-radius: 6px;
+    font-size: 17px;
+    margin-left: 10px;
+    background-color: #e2fdfa;
+    border:0;
+}
+.legend li small
+{
+    margin-left: 5px;
+}
+.seat
+{
+    height: 15px;
+    width: 15px;
+    background-color: #cfe0f1;
+    margin: 5px;
+    border-top-left-radius: 14px;
+    border-top-right-radius: 14px;
+}
+.row{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.seat.selected
+{
+    background-color: green;
+
+}
+.seat.occupied{
+    background-color: rgb(129, 99, 99);
+}
+.seat:not(.occupied):hover{
+    transform: scale(1.25);
+    cursor: pointer;
+}
+.legend .seat:hover
+{
+    cursor: default;
+    transform: scale(1);
+}
+p.totals span
+{
+    color: #DBF4A7;
+    font-size: 17px;
+
+}
+.screen{
+    height: 70px;
+    background-color: white;
+    margin: 0 20px 0 0;
+    transform: rotateX(-45deg);
+    width: 100%;
+    border-radius: 4px;
+    box-shadow:0 3px 10px rgba(255,255,255,1);
+}
+.container
+{
+    perspective: 1000px;
+}
+.seat:nth-last-of-type(2)
+{
+    margin-left: 30px;
+}
+.seat:nth-of-type(2)
+{
+    margin-right: 30px;
+}
+h1{
+    position: absolute;
+    top: 50px;
+    font-size: 70px;
+
 }
