--- a/p02/style.css
+++ b/p02/style.css
@@ -103,3 +103,22 @@ h1{
     font-size: 70px;
 
 }
+.but
+{
+    margin-top: 10px;
+    position: relative;
+    padding: 5px;
+    border-radius: 4px;
+    border:0;
+}
+
+.b1
+{
+    margin-top: 10px;
+    position: relative;
+    padding: 5px;
+    width: 110%;
+    border-radius: 4px;
+    border:0;
+    margin-left: -2px;
+}
