--- a/p03/style.css
+++ b/p03/style.css
@@ -17,7 +17,7 @@ body
     margin: 0;
     background-image: url(/p03/Images/ss_d196d945c6170e9cadaf67a6dea675bd5fa7a046.1920x1080.jpg);
     background-repeat: no-repeat;
-    background-size:cover;
+    background-size:100%;
 
 }
 h1
@@ -25,6 +25,7 @@ h1
     font-size: 300%;
     font-weight: bold;
     transform: scale(3.0,1.5);
+    color: burlywood;
 }
 
 .video
