--- a/style.css
+++ b/style.css
@@ -46,6 +46,15 @@ a{
     padding-bottom: 10px;
     padding-top: 8px;
 }
+.bt3
+{
+    font-size: 30px;
+    margin: 20px;
+    padding-left:10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    padding-top: 8px;
+}
     
 .bt1:hover
 {
@@ -55,6 +64,10 @@ a{
 {
     transform: scale(1.25);
 
+}
+.bt3:hover
+{
+    transform: scale(1.25);
 }
 li{
     list-style: none;
