--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body
     background-image: url(/4K-Programming-Wallpapers-Top-Free-4K-Programming-.jpg);
     background-repeat: no-repeat;
     background-size:100%;
+    background-color:black;
     
 }
 
