--- a/p04/style.css
+++ b/p04/style.css
@@ -4,6 +4,7 @@
 {
     box-sizing: border-box;
     font-family: 'Atkinson Hyperlegible', sans-serif;
+
 }
 body{
     align-items: center;
@@ -25,12 +26,13 @@ h1{
 
 .currency select
 {
-    padding: 10px;
+    padding: 10%;
     border-radius: 4px;
-    font-size: 18px;
+    font-size: 18%;
     background-color: #E8F1F2;
     border:0;
     position: relative;
+    margin-left: 10px;
 }
 
 .currency input
@@ -42,6 +44,7 @@ h1{
     background-color: #E8F1F2;
     border:0;
     position: relative;
+    margin-left: 10px;
 }
 .flip-rates-container
 {
@@ -58,8 +61,8 @@ h1{
     position: relative;
 }
 .btn{
-    font-size: 18px;
-    width: 100px;
+    font-size: 18%;
+    width: 100%;
     margin: 20px;
     margin-left: 100px;
     padding-top: 8px;
