--- a/p04/style.css
+++ b/p04/style.css
@@ -30,7 +30,7 @@ h1{
 }
 .currency select
 {
-    margin-left: 10%;
+    margin-left: 10px;
     padding: 10px;
     border-radius: 4px;
     font-size: 18px;
