--- a/p04/style.css
+++ b/p04/style.css
@@ -61,9 +61,8 @@ h1{
 }
 .btn{
     font-size: 16px;
-    width: 50%;
+    width: 20%;
     margin: 20px;
     margin-left: 100px;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    border-radius: 4px;
 }
