--- a/style.css
+++ b/style.css
@@ -56,7 +56,15 @@ a{
     padding-bottom: 10px;
     padding-top: 8px;
 }
-    
+.bt4
+{
+    font-size: 30px;
+    margin: 20px;
+    padding-left:10px;
+    padding-right: 10px;
+    padding-bottom: 10px;
+    padding-top: 8px;
+}
 .bt1:hover
 {
     transform: scale(1.25);
@@ -67,6 +75,10 @@ a{
 
 }
 .bt3:hover
+{
+    transform: scale(1.25);
+}
+.bt4:hover
 {
     transform: scale(1.25);
 }
