--- a/p03/style.css
+++ b/p03/style.css
@@ -24,7 +24,7 @@ body
 }
 h1
 {
-    font-size: 300%;
+    font-size: 200px;
     font-weight: bold;
     transform: scale(3.0,1.5);
     color: burlywood;
