--- a/p07/style.css
+++ b/p07/style.css
@@ -7,6 +7,12 @@ body{
     background-color: #102E4A;
     color: white;
     font-family: 'Noto Sans', sans-serif;
+    overflow: hidden;
+    margin: 0;
+    align-items: center;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
 }
 /* header{
     align-items: center;
@@ -20,8 +26,12 @@ body{
     height: 150px;
 } */
 header h1{
-    font-size: 35px;
+    font-size: 45px;
     font-weight:30px;
+}
+header p
+{
+    font-size: 36px;
 }
 .gamecontainer{
     fill:transparent;
@@ -34,6 +44,10 @@ header h1{
     top: 200px;
     left:0;
     right: 0;
+    padding: 20px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
 }
 .picture{
     /* border:2px solid green; */
@@ -52,27 +66,40 @@ header h1{
 }
 .correct-container{
     text-align: center;
+    font-size: 20px;
 }
 .correct{
     text-align: center;
     align-items: center;
     justify-content: center;
+    
+    height: 70px;
+}
+.correct-container p
+{
+    font-size: 36px;
 }
 .letter{
     margin-left:5px;
     margin-right: 5px;
-    border-bottom: 3px solid white;
-    width: 15px;
-    height: 30px;
-    font-size: large;
+    border-bottom: 5px solid white;
+    width: 35px;
+    margin: 0 5px;
+    height: 50px;
     display: inline-flex;
     text-align: center;
+    align-items: center;
+    justify-content: center;
+    font-size: 36px;
 }
 .incorrect-container{
     position: absolute;
-    top:0;
-    right:10px;
+    top: 20px;
+    right: 200px;
+    flex-direction: column;
     text-align: right;
+    font-size: 30px;
+
 }
 .gameover-container{
     border: 2px solid black;
@@ -82,7 +109,7 @@ header h1{
     left:0;
     right: 0;
     background-color: rgba(0,0,0,0.3);
-    /* display: flex; */
+    /*display: flex;*/ 
     align-items: center;
     justify-content: center;
     overflow: hidden;
@@ -96,6 +123,10 @@ header h1{
     background-color: transparent;
     border:none;
     text-align: right;
+    margin-right: 5px;
+    justify-content: center;
+    align-items: center;
+    font-size: large;
 }
 .closeheading{
     display: flex;
@@ -107,11 +138,12 @@ header h1{
     border-bottom-right-radius: 0;
 }
 .closeheading h2{
-    padding-left:4px ;
+    padding-left: 30px ;
     width:400px;
     text-align: center;
     align-items: center;
-    /* border: 2px solid black; */
+
+   /* border: 2px solid black; */
 }
 .gameover{
     background-color: white;
@@ -121,4 +153,27 @@ header h1{
     margin-top: 0;
     text-align: center;
     height: 180px;
+}
+
+.notification
+{
+    position: absolute;
+    padding: 15px;
+    bottom: -80px;
+    background-color: rgba(0,0,0,0.3);
+    height: 55px;
+    border-radius: 10px;
+    transition: transform 0.5s ease-in-out;
+}
+.notification.show{
+    transform:translateY(-100px)
+}
+.notification p
+{
+    margin: 0;
+
+}    
+.man
+{
+    display: none;
 }
